feat: realizando ajustes na página inicial

--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -1,3 +1,13 @@
+/* html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #2e3a59; 
+} */
+
 /* Div principal (#root já ocupa 100% por padrão no React) */
 #root {
   height: 100%;
