--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,31 +1,17 @@
 .footer {
-  display: flex;
-  justify-content: center;
-  padding: 30px 0;
-  border-top: 0.4px solid #d7d7df;
+  background-color: #f5f5fa;
+  padding: 40px 20px; /* Aumenta o padding */
+  text-align: center;
+  font-size: 14px;
+  color: #555;
 }
 
-.footer-content {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-.footer-logo {
-  height: 67px;
+.footer-copy {
+  margin-top: 10px; /* Adiciona espaçamento superior */
 }
 
 @media (max-width: 800px) {
-  .footer-logo {
-    height: 37px;
-  }
-
-  .footer-content {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .footer-copy {
-    margin-bottom: 20px;
+  .footer {
+    padding: 20px;
   }
 }
