--- a/src/styles/sobre.css
+++ b/src/styles/sobre.css
@@ -1,12 +1,12 @@
 .container-sobre {
-  background-color:#d1d1db;
+  background-color:#c8c8d1;
   padding: 60px 0; /* Padding ajustado para espaçamento vertical */
   width: 100vw; /* Ocupa 100% da largura da janela */
   margin: 0; /* Remove margens que podem desalinhá-lo */
   box-sizing: border-box; /* Certifica que o padding não afeta a largura total */
   text-align: center;
 }
-
+  
 .info-content {
   max-width: 1200px; /* Limita o conteúdo a uma largura fixa */
   margin: 0 auto; /* Centraliza o conteúdo */
