--- a/src/styles/dashboard.css
+++ b/src/styles/dashboard.css
@@ -2,21 +2,21 @@
 
 .hero {
   height: 100vh;
-  width: 100vw; /* Garantindo que ocupe toda a largura da tela */
+  width: 100vw; 
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  padding-top: 60px; /* Ajusta o espaço para não sobrepor à navbar */
+  padding-top: 60px; 
   background-color: var(--cor-fundo-claro);
-  overflow: hidden; /* Previne transbordamento de conteúdo */
+  overflow: hidden; 
 }
 
 .hero-main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%; /* Garantir largura total */
+  width: 100%; 
   gap: 50px;
   padding: 0 20px;
 }
@@ -55,7 +55,7 @@
 }
 
 .hero-main-img img {
-  max-width: 100%; /* Garante que a imagem ocupe toda a largura */
+  max-width: 100%;
   height: auto;
   object-fit: contain;
   transition: transform 0.3s ease-in-out;
@@ -65,17 +65,15 @@
   transform: scale(1.05);
 }
 
-/* Description Section */
 .desc {
   padding: 75px 20px;
-  background-color: var(--cor-fundo-escuro); /* Fundo escuro */
+  background-color: var(--cor-fundo-escuro); 
   text-align: center;
-  width: 100vw; /* Garante que ocupe toda a largura da tela */
-  margin-top: 0; /* Remove margens extras */
+  width: 100vw; 
+  margin-top: 0; 
 }
 
 .desc h3 {
-  /* font-family: var(--righteous); */
   font-size: 30px;
   color: var(--cor-fonte-clara);
   margin-bottom: 31px;
@@ -91,9 +89,6 @@
   color: var(--cor-fonte-clara);
 }
 
-
-
-/* Media Queries */
 @media (max-width: 800px) {
   .hero-main {
     flex-direction: column;
